# jobhunter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  app.py  app_cli.py  config.py  create_user.py  entrypoint.sh  hh_parser.py  security.py
backend/agents/cv_analyzer/: agent.py  tools.py
backend/agents/cv_analyzer/prompts/: base.yaml
backend/agents/resume_advisor/: __init__.py  agent.py
backend/agents/resume_advisor/prompts/: base.yaml
backend/agents/searcher/: agent.py  tools.py
backend/agents/searcher/prompts/: base.yaml
backend/agents/vacancy_filter/: agent.py  tools.py
backend/agents/vacancy_filter/prompts/: base.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20260720_01_job_search_storage.py  20260721_01_multi_user_auth.py  20260721_02_profile_search_prompt.py  20260724_01_resume_recommendations.py  20260724_02_vacancy_analyses.py  20260724_03_fix_vacancy_sources.py  2fd8a8e0b9b9_create_test_table.py
backend/api/v1/: auth.py  endpoints.py  history.py  schemes.py
backend/base_agent/: agent.py  tools.py
backend/db/: connector.py  repositories.py
backend/db/models/: __init__.py  job_search.py  resume_recommendation.py  test.py  user.py  vacancy_analysis.py
backend/llm_providers/: __init__.py  base.py  factory.py  gigachat.py  openrouter.py
backend/utils/: parser.py  prompt_loader.py  readers.py
frontend/: Dockerfile  api.py  app.py  auth.py  ui.py
frontend/db/: __init__.py  connector.py  repositories.py
frontend/pages/: 1_Профили.py  2_Профиль.py  profile.py  profiles.py  vacancy_analyses.py  vacancy_analysis.py
frontend/static/: theme.css
frontend/templates/: brand.html  cards_row.html  home_hero.html  login_intro.html  profile_card.html  profile_header.html  profile_list_name.html  profile_list_positions.html  profile_list_summary.html  profile_row.html  profiles_header.html  radar.html  stylesheet.html  table_header.html  table_link_cell.html  table_row.html  tag.html  text_card.html  vacancy_table.html
