[project]
name = "jobhunter"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexanderPAI",email = "petrov@backendpages.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "playwright (>=1.61.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "langgraph (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
